commit-mongo-registros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=micro_servicio_1_lineales_arboles
 
 server.port=8080
+
+spring.data.mongodb.uri=mongodb://localhost:27017/Algorithms
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
