--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version> 
 		</dependency>
+		<dependency>    
+			<groupId>guru.nidi</groupId>    
+			<artifactId>graphviz-java</artifactId>    
+			<version>0.18.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
